Fixing progress text so that it isn't cut off

--- a/course/format/ucla/styles.css
+++ b/course/format/ucla/styles.css
@@ -173,3 +173,5 @@ span.commands a img.no-editing-icons {
     margin-top: -1.0em;
     width: auto;
 }
+
+.path-course-view .single-section .completionprogress {margin-right: 0 !important;}
